--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
 <div class="sticky-button-container">
-  <div id="homeBtn"><img src="assets/home1.png" width="25" height="23" alt="Home"></div>
+  <div id="homeBtn"><img src="assets/home.png" width="25" height="23" alt="Home"></div>
 </div>
 <div class="container-fluid mt-3 mb-4">
   <nav id="banner_bg">
